#37 Replace java.util.Date with java.time.LocalDate or java.time.LocalDateTime